<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/constraint_today"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:id="@+id/today_first_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="38dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_wind_speed_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/wind_speed_detail" />

        <TextView
            android:id="@+id/detail_wind_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_wind_speed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/wind_speed"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_second_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toStartOf="@+id/today_third_card"
        app:layout_constraintStart_toEndOf="@+id/today_first_card"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_pressure_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pressure_detail" />

        <TextView
            android:id="@+id/detail_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_pressure_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/pressure"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_third_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_precipitation_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/precipitation_detail" />

        <TextView
            android:id="@+id/detail_precipitation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_precipitation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/precipitation"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_forth_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_first_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_temperature_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/temperature_detail" />

        <TextView
            android:id="@+id/detail_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_temperature_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/temperature"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_fifth_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toStartOf="@+id/today_sixth_card"
        app:layout_constraintStart_toEndOf="@+id/today_forth_card"
        app:layout_constraintTop_toBottomOf="@+id/today_second_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_weather_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/detail_weather_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="113dp"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_sixth_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_third_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_humidity_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/humidity_detail" />

        <TextView
            android:id="@+id/detail_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_humidity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/humidity"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_seventh_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_forth_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_visibility_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/visibility_detail" />

        <TextView
            android:id="@+id/detail_visibility_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_visibility_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/visibility"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_eighth_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toStartOf="@+id/today_ninth_card"
        app:layout_constraintStart_toEndOf="@+id/today_seventh_card"
        app:layout_constraintTop_toBottomOf="@+id/today_fifth_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_cloud_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cloud_cover_detail" />

        <TextView
            android:id="@+id/detail_cloud_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_cloud_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cloud_cover"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/today_ninth_card"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/colorSearchInputBox"
        app:cardCornerRadius="2mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_sixth_card"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/detail_ozone_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ozone_detail" />

        <TextView
            android:id="@+id/detail_ozone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/detail_ozone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ozone"
            android:textColor="@color/colorSearchHint"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>